--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ismaw3he.github.io/redux-advanced",
+  "homepage": "http://ismaw3he.github.io/supplier",
   "name": "supplier",
   "version": "0.1.0",
   "private": true,
