--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.21",
     "react-google-recaptcha": "^2.1.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
